--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
   <style>
   #home {color:black;
         text-decoration:none;}
-@font-face { font-family: NanumMyeongjo; src: url('NanumMyeongjoExtraBold.ttf'); }
+@font-face { font-family: 'Nanum Myeongjo', serif; }
     h1 {border:13px dotted #7FFF00;
     padding:5px;
     margin:60px;
