--- a/1.html
+++ b/1.html
@@ -5,6 +5,7 @@
   </title>
   <meta charset="utf-8">
   <style>
+  @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&subset=korean');
   #home {color:black;
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
