--- a/3.html
+++ b/3.html
@@ -4,6 +4,7 @@
   <title>
   </title>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&amp;subset=korean" rel="stylesheet">
   <style>
   @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&subset=korean');
   #home {color:black;
