--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&amp;subset=korean" rel="stylesheet">
   <style>
-  @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&subset=korean');
+
   #home {color:black;
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
@@ -17,7 +17,8 @@
 
     font-size:100px;
     word-break:break-all;
-    font-family: NanumMyeongjo;
+    font-family: 'Nanum Myeongjo', serif;
+
     line-height:120%;}
     a {color:#7FFF00;
       text-decoration:line-through;
@@ -25,7 +26,8 @@
       text-decoration-style:wavy;
     cursor:url(greendot.cur),auto;}
     h2 {
-    font-family: NanumMyeongjo;
+      font-family: 'Nanum Myeongjo', serif;
+
     display:block;
 
     text-align:center;
@@ -33,7 +35,8 @@
     line-height:0%}
 
     .dd{cursor:url(greendot.cur),auto;}
-    h3 {font-family:NanumMyeongjo;
+    h3 {font-family: 'Nanum Myeongjo', serif;
+
     text-align: center;
     font-size:50px;}
 
