--- a/2.html
+++ b/2.html
@@ -17,7 +17,8 @@
 
     font-size:70px;
     word-break:break-all;
-    font-family: NanumMyeongjo;
+    font-family: 'Nanum Myeongjo', serif;
+
     line-height:90px;}
     a {color:#7FFF00;
       text-decoration:line-through;
@@ -25,7 +26,8 @@
       text-decoration-style:wavy;
     cursor:url(greendot.cur),auto;}
     h2 {
-    font-family: NanumMyeongjo;
+      font-family: 'Nanum Myeongjo', serif;
+
     display:block;
 
     text-align:center;
@@ -33,7 +35,8 @@
     line-height:0%}
 
     .dd{cursor:url(greendot.cur),auto;}
-    h3 {font-family:NanumMyeongjo;
+    h3 {font-family: 'Nanum Myeongjo', serif;
+
     text-align: center;
     font-size:50px;}
 
