--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&amp;subset=korean" rel="stylesheet">
   <style>
-
+@import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&subset=korean');
   #home {color:black;
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
