--- a/1.html
+++ b/1.html
@@ -6,53 +6,65 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&amp;subset=korean" rel="stylesheet">
   <style>
+
 @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700,800&subset=korean');
   #home {color:black;
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
-    h1 {border:13px dotted #7FFF00;
+    h1 {border:0px dotted #7FFF00;
     padding:5px;
-    margin:60px;
-    display:block;
+    margin-left:150px;
 
-    font-size:100px;
+    margin-bottom:20px;
+
+    font-size:50px;
     word-break:break-all;
     font-family: 'Nanum Myeongjo', serif;
 
-    line-height:120%;}
-    a {color:#7FFF00;
-      text-decoration:line-through;
-      text-decoration-color:black;
-      text-decoration-style:wavy;
-    cursor:url(greendot.cur),auto;}
+    line-height:70px;}
+    a {color:#cc0000;
+
+      text-decoration:none;
+      cursor:url(reddot.cur),auto;}
     h2 {
       font-family: 'Nanum Myeongjo', serif;
+      display:block;
+      text-align:center;
+      font-size:70px;
+      line-height:80px}
 
-    display:block;
 
-    text-align:center;
-    font-size:600%;
-    line-height:0%}
-
-    .dd{cursor:url(greendot.cur),auto;}
+    body {cursor:url(graydot.cur),auto;}
     h3 {font-family: 'Nanum Myeongjo', serif;
 
     text-align: center;
-    font-size:50px;}
-
+    font-size:40px;
+    line-height: 50px;}
+    body {
+      background: rgb(159,38,38);
+  background: linear-gradient(360deg, rgba(159,38,38,1) 0%, rgba(137,137,137,1) 61%);
+      }
     </style>
 </head>
 <body>
 
-  <div class="dd"><h2><p><a href="1.html" id="home">글과점</a></p><p>ㅡ.,</p></h2>
-    <h3>tumblbug, opening hour,  map, 기역기역. </h3>
+<h2><p><a href="1.html" id="home">글과점<br>text&dot<br>textery</a></p></h2></div>
+    <h3>(tumblbug)<br>(how to visit)<br>(about 77) </h3>
 
-<p><h1>기존의 글에서 추출하거나 직접 기술한 ‘한 문장(<a href="2.html">sentence</a>)’은
-  작업의 출발점이 되어, 작가들의 독립적인 한 문장이 모두 모였을 때 하나의 ‘단락(<a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%82%98%EB%88%94%EB%AA%85%EC%A1%B0&oquery=css+%ED%96%89%EA%B0%84&tqi=UaaJ3lpVuENssuGtgyNssssssFl-471190">paragraph</a>)’
+
+
+<p><h1>기존의 글에서 추출하거나 직접 기술한
+  <br> ‘한 문장(<a href="2.html">sentence</a>)’은 작업의 출발점이 되어,
+  <br>작가들의 독립적인 한 문장이 모두 모였을 때 <br>하나의 ‘단락(<a href="">paragraph</a>)’
      을 구성합니다.</h1>
-<h1>만들어진 단락은 문맥상 연결되지 않지만, 이로 인해 역설적으로 작가 개인의 한 문장 자체에 주목하게 됩니다. 동시에 단락은 전시의 제목이 되어 모든 작가의 문장을 왜곡 없이 포괄합니다.</h1>
-<h1>‘한 문장’을 통해 작가들의 ‘작품(<a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%82%98%EB%88%94%EB%AA%85%EC%A1%B0&oquery=css+%ED%96%89%EA%B0%84&tqi=UaaJ3lpVuENssuGtgyNssssssFl-471190">artwork</a>)’ 하나하나에 주목하며,
-   ‘단락’으로 통일된 시각 아이덴티티를 가진 ‘전시(<a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%82%98%EB%88%94%EB%AA%85%EC%A1%B0&oquery=css+%ED%96%89%EA%B0%84&tqi=UaaJ3lpVuENssuGtgyNssssssFl-471190">exhibition</a>)’를
-     선보입니다.</h1></p></div>
+<h1>만들어진 단락은 문맥상 연결되지 않지만,
+  <br>이로 인해 역설적으로 작가 개인의 한 문장
+  <br>자체에 주목하게 됩니다. 동시에 단락은
+  <br>전시의 ‘제목(<a href="">title</a>)’이 되어 모든 작가의
+  <br>문장을 왜곡 없이 포괄합니다.</h1>
+<h1>‘한 문장’을 통해 작가들의 ‘작품(<a href="">artwork</a>)’
+  <br>하나하나에 주목하며, ‘단락’으로
+  통일된 <br>시각 아이덴티티를 가진 ‘전시(<a href="">exhibition</a>)’를
+     <br>선보입니다.</h1></p>
 </body>
 </html>
