--- a/20.html
+++ b/20.html
@@ -33,20 +33,19 @@
       display:block;
       text-align:center;
       font-size:70px;
-      line-height:80px}
+      line-height:0%}
 
-    body {cursor:url(graydot.cur),auto;}
+    .dd{cursor:url(graydot.cur),auto;}
     h3 {font-family: 'Nanum Myeongjo', serif;
 
     text-align: center;
-    font-size:40px;
-  line-height: 50px;}
+    font-size:40px;}
 
     </style>
 </head>
 <body>
 
-  <h2><p><a href="1.html" id="home">글과점<br>text&dot<br>textery</a></p></h2>
+  <div class="dd"><h2><p><a href="1.html" id="home">글과점</a></p><p>ㅡ.,</p></h2>
     <h3>(tumblbug)<br>(how to visit)<br>(about 77) </h3>
 
 <p><h1>한 문장인데요 아무래도.
@@ -69,6 +68,6 @@
       <br>그는 사막으로 갔다.
       <br>명절, 혼자 쇠는 건 어떨까요?
       <br>설거지는 니가 알아서 하라는 말.
-      <br>내 책상은 아무도 치워주지 않는다.</h1></p>
+      <br>내 책상은 아무도 치워주지 않는다.</h1></p></div>
 </body>
 </html>
