--- a/1.html
+++ b/1.html
@@ -13,14 +13,13 @@
 @font-face { font-family: 'Nanum Myeongjo', serif; }
     h1 {border:0px dotted #7FFF00;
     padding:5px;
-    margin-left:150px;
-
-    margin-bottom:20px;
-
+    margin:auto;
+    margin-bottom:30px;
+    display:block;
+    width:75%;
     font-size:50px;
     word-break:break-all;
     font-family: 'Nanum Myeongjo', serif;
-
     line-height:70px;}
     a {color:#cc0000;
 
@@ -40,10 +39,15 @@
     text-align: center;
     font-size:40px;
     line-height: 50px;}
-    body {
-      background: rgb(159,38,38);
-  background: linear-gradient(360deg, rgba(159,38,38,1) 0%, rgba(137,137,137,1) 61%);
-      }
+
+
+      @media (max-width:)
+      {
+      h1 {margin:none;
+
+      margin-bottom:none;
+}
+    }
     </style>
 </head>
 <body>
@@ -54,17 +58,15 @@
 
 
 <p><h1>기존의 글에서 추출하거나 직접 기술한
-  <br> ‘한 문장(<a href="2.html">sentence</a>)’은 작업의 출발점이 되어,
-  <br>작가들의 독립적인 한 문장이 모두 모였을 때 <br>하나의 ‘단락(<a href="">paragraph</a>)’
-     을 구성합니다.</h1>
+  ‘한 문장(<a href="2.html">sentence</a>)’은 작업의 출발점이 되어,
+  작가들의 독립적인 한 문장이 모두 모였을 때 하나의 ‘단락(<a href="">paragraph</a>)’을 구성합니다.</h1>
 <h1>만들어진 단락은 문맥상 연결되지 않지만,
-  <br>이로 인해 역설적으로 작가 개인의 한 문장
-  <br>자체에 주목하게 됩니다. 동시에 단락은
-  <br>전시의 ‘제목(<a href="">title</a>)’이 되어 모든 작가의
-  <br>문장을 왜곡 없이 포괄합니다.</h1>
+  이로 인해 역설적으로 작가 개인의 한 문장
+  자체에 주목하게 됩니다. 동시에 단락은
+  전시의 ‘제목(<a href="">title</a>)’이 되어 모든 작가의
+  문장을 왜곡 없이 포괄합니다.</h1>
 <h1>‘한 문장’을 통해 작가들의 ‘작품(<a href="">artwork</a>)’
-  <br>하나하나에 주목하며, ‘단락’으로
-  통일된 <br>시각 아이덴티티를 가진 ‘전시(<a href="">exhibition</a>)’를
-     <br>선보입니다.</h1></p>
+  하나하나에 주목하며, ‘단락’으로
+  통일된 시각 아이덴티티를 가진 ‘전시(<a href="">exhibition</a>)’를 선보입니다.</h1></p>
 </body>
 </html>
