--- a/1.html
+++ b/1.html
@@ -41,11 +41,11 @@
     line-height: 50px;}
 
 
-      @media (max-width:)
+      @media (max-width:400px)
       {
-      h1 {margin:none;
-
-      margin-bottom:none;
+      h1 {
+        width:80px;
+        margin-bottom:45px;
 }
     }
     </style>
