--- a/2.html
+++ b/2.html
@@ -11,17 +11,14 @@
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
     h1 {
-    margin-left:65px;
-    margin-right:65px;
-    margin-bottom:-10px;
-    display:block;
+      margin:auto;
+      margin-bottom:30px;
+      display:block;
+      width:75%;
     text-align:center;
     font-size:50px;
     word-break:break-all;
     font-family: 'Nanum Myeongjo', serif;
-    text-decoration: underline #7FFF00;
-    text-decoration-color: #7FFF00;
-
     line-height:70px;}
     a {color:#7FFF00;
       text-decoration:line-through;
