--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
 <style>
 body {
   background-color: #cc0000;
+  cursor:url(graydot.cur),auto;
 }
-a{cursor:url(graydot.cur),auto;}
+backgroudn-color {cursor:url(graydot.cur),auto;}
 
 img {
   display: block;
+  margin-top: auto;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: auto;
+}
+body {cursor:url(graydot.cur),auto;}
+a {cursor:url(graydot.cur),auto;}
+
+@media(max-width:800px) {img {
+  display: block;
+  margin-top: 50%;
 }
 
 </style>
 </head>
 <body>
-
-<a href="1.html"><img src="whatadot.jpg" width="85%"></a>
-
+<p>
+<a href="1.html"><img src="whatadot.jpg" width="87%"></a>
+</p>
 </body>
 </html>
