--- a/2.html
+++ b/2.html
@@ -11,10 +11,8 @@
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
     h1 {
-      margin:auto;
+      margin:none;
       margin-bottom:30px;
-      display:block;
-      width:95%;
     text-align:center;
     font-size:50px;
     word-break:break-all;
