--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@ backgroudn-color {cursor:url(graydot.cur),auto;}
 
 img {
   display: block;
-  margin-top: auto;
+
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: auto;
+
 }
 body {cursor:url(graydot.cur),auto;}
 a {cursor:url(graydot.cur),auto;}
 
-@media(max-width:800px) {img {
-  display: block;
-  margin-top: 50%;
-}
+@media (max-width:414pt)
+{p {margin-top:25%;margin-bottom:150px}}
 
 </style>
 </head>
 <body>
+
 <p>
-<a href="1.html"><img src="whatadot.jpg" width="87%"></a>
+<a href="1.html"><img src="whatadot.jpg" width="85%"></a>
 </p>
+
+
 </body>
 </html>
