--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@ img {
 body {cursor:url(graydot.cur),auto;}
 a {cursor:url(graydot.cur),auto;}
 
-@media (max-width:414pt)
-{p {margin-top:60%;margin-bottom:150px}}
-
+@media 
 </style>
 </head>
 <body>
