--- a/2.html
+++ b/2.html
@@ -11,18 +11,17 @@
         text-decoration:none;}
 @font-face { font-family: 'Nanum Myeongjo', serif; }
     h1 {
-      margin:none;
+      margin:auto;
       margin-bottom:30px;
     text-align:center;
     font-size:50px;
     word-break:break-all;
     font-family: 'Nanum Myeongjo', serif;
     line-height:70px;}
-    a {color:#7FFF00;
-      text-decoration:line-through;
-      text-decoration-color:black;
-      text-decoration-style:wavy;
-    cursor:url(reddot.cur),auto;}
+    a {
+
+      text-decoration:none;
+      cursor:url(reddot.cur),auto;}
     h2 {
       font-family: 'Nanum Myeongjo', serif;
       display:block;
@@ -44,9 +43,9 @@
   <h2><p><a href="1.html" id="home">글과점<br>text&dot<br>textery</a></p></h2>
     <h3>(tumblbug)<br>(how to visit)<br>(about 77) </h3>
 
-<p><h1>한 문장인데요 아무래도.
-      <br>그는 사막으로 갔다.
-      <br>명절, 혼자 쇠는 건 어떨까요?
+<p><h1><a href="2-1.html"><font color="#00ffff">하나둘씩 반짝이기 시작한다.</font></a>
+      <br><a href="2-2.html"><font color="#996600">개개인의 기억 조각은 하나 둘 쌓여 공간의 기억이 된다.</a></font>
+      <br>명절, 혼자 쇠는 건 어떨까요?</font>
       <br>설거지는 니가 알아서 하라는 말.
       <br>내 책상은 아무도 치워주지 않는다.
       <br>그는 사막으로 갔다.
